Rest Repositories 라이브러리를 추가해서 Repository를 RestController의 역할도 동시에 하도록 만들었다.

--- a/carserver/src/main/resources/application.properties
+++ b/carserver/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
+# Rest repository Context Root Address
+spring.data.rest.base-path=/api
+
