--- a/carserver/src/main/resources/application.properties
+++ b/carserver/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.port = 12000
 
 logging.level.org.suhodo=debug
 logging.level.org.springframework=info
+logging.level.org.springframework.security=trace
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:5306/webdb
